--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           data-code-challenge="4n8lM-b0cQnITX2Gy0mfviaQv_fYhU0pzEGJr7HeA-o"
           data-code-challenge-method="S256"
           data-response-mode="query"
-          data-host="https://app.staging.grnspace.ca"
+          data-host="https://app.staging.grnspace.com"
         ></div>
 
         <div
@@ -52,10 +52,10 @@
           data-code-challenge="4n8lM-b0cQnITX2Gy0mfviaQv_fYhU0pzEGJr7HeA-o"
           data-code-challenge-method="S256"
           data-response-mode="query"
-          data-host="https://app.staging.grnspace.ca"
+          data-host="https://app.staging.grnspace.com"
           data-lang="fr"
         >
-          <a class="gs-signin-anchor" href="https://app.staging.grnspace.ca/oauth2/authorize?client_id=gs-dev-demo-pkce&amp;redirect_uri=https%3A%2F%2Fgrnspace.github.io%2Fgs-oidc-client%2F&amp;response_type=code&amp;scope=openid%20email&amp;code_challenge=4n8lM-b0cQnITX2Gy0mfviaQv_fYhU0pzEGJr7HeA-o&amp;code_challenge_method=S256&amp;response_mode=query"><span>Sign in with Greenspace</span></a>
+          <a class="gs-signin-anchor" href="https://app.staging.grnspace.com/oauth2/authorize?client_id=gs-dev-demo-pkce&amp;redirect_uri=https%3A%2F%2Fgrnspace.github.io%2Fgs-oidc-client%2F&amp;response_type=code&amp;scope=openid%20email&amp;code_challenge=4n8lM-b0cQnITX2Gy0mfviaQv_fYhU0pzEGJr7HeA-o&amp;code_challenge_method=S256&amp;response_mode=query"><span>Sign in with Greenspace</span></a>
         </div>
 
         <pre><code id="id-token-result" class="json" style="display: none;"></code></pre>
